--- a/boards/templates/base.html
+++ b/boards/templates/base.html
@@ -10,12 +10,13 @@
           rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     {% block stylesheet %}{% endblock %}
-    <!-- HERE -->
   </head>
   <body>
     {% block body %}
-      <!-- HERE -->
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
@@ -39,21 +40,17 @@
                      aria-haspopup="true"
                      aria-expanded="false">{{ user.username }}</a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="#">My account</a>
-                    <a class="dropdown-item" href="#">Change password</a>
+                    <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+                    <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
                     <div class="dropdown-divider"></div>
-                    <div class="dropdown-item">
-                      <form method="post" action="{% url 'logout' %}">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-link p-0 m-0 align-baseline">Log out</button>
-                      </form>
-                    </div>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                   </div>
                 </li>
               </ul>
             {% else %}
               <form class="form-inline ml-auto">
-                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
               </form>
             {% endif %}
           </div>
@@ -69,6 +66,6 @@
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- AND HERE -->
+    {% block javascript %}{% endblock %}
   </body>
 </html>
