--- a/boards/templates/boards/topics.html
+++ b/boards/templates/boards/topics.html
@@ -30,9 +30,16 @@
               <a href="{{ topic_url }}">{{ topic.subject }}</a>
             </p>
             <small class="text-muted">
-              Pages:
-              {% for i in topic.get_page_range %}<a href="{{ topic_url }}?page={{ i }}">{{ i }}</a>{% endfor %}
-              {% if topic.has_many_pages %}... <a href="{{ topic_url }}?page={{ topic.get_page_count }}">Last Page</a>{% endif %}
+              {% if topic.get_page_count >= 1 %}
+                Pages:
+                {% for i in topic.get_page_range %}
+                  <a href="{{ topic_url }}?page={{ i }}">{{ i }}</a>
+                  {% if not forloop.last %},{% endif %}
+                {% endfor %}
+                {% if topic.has_many_pages %}... <a href="{{ topic_url }}?page={{ topic.get_page_count }}">Last Page</a>{% endif %}
+              {% else %}
+                No pages
+              {% endif %}
             </small>
           </td>
           <td class="align-middle">{{ topic.starter.username }}</td>
